; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/librdmacm/examples/extr_mckey.c_join_handler.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/librdmacm/examples/extr_mckey.c_join_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.cmatest_node = type { i32, i32, i32, i32, i32 }
%struct.rdma_ud_param = type { %struct.TYPE_8__, i32, i32 }
%struct.TYPE_8__ = type { i32, i32, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }

@AF_INET6 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"mckey: joined dgid: %s mlid 0x%x sl %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [40 x i8] c"mckey: failure creating address handle\0A\00", align 1
@test = common dso_local global %struct.TYPE_7__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cmatest_node*, %struct.rdma_ud_param*)* @join_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @join_handler(%struct.cmatest_node* %0, %struct.rdma_ud_param* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.cmatest_node*, align 8
  %5 = alloca %struct.rdma_ud_param*, align 8
  %6 = alloca [40 x i8], align 16
  store %struct.cmatest_node* %0, %struct.cmatest_node** %4, align 8
  store %struct.rdma_ud_param* %1, %struct.rdma_ud_param** %5, align 8
  %7 = load i32, i32* @AF_INET6, align 4
  %8 = load %struct.rdma_ud_param*, %struct.rdma_ud_param** %5, align 8
  %9 = getelementptr inbounds %struct.rdma_ud_param, %struct.rdma_ud_param* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %9, i32 0, i32 2
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = getelementptr inbounds [40 x i8], [40 x i8]* %6, i64 0, i64 0
  %15 = call i32 @inet_ntop(i32 %7, i32 %13, i8* %14, i32 40)
  %16 = getelementptr inbounds [40 x i8], [40 x i8]* %6, i64 0, i64 0
  %17 = load %struct.rdma_ud_param*, %struct.rdma_ud_param** %5, align 8
  %18 = getelementptr inbounds %struct.rdma_ud_param, %struct.rdma_ud_param* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.rdma_ud_param*, %struct.rdma_ud_param** %5, align 8
  %22 = getelementptr inbounds %struct.rdma_ud_param, %struct.rdma_ud_param* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i8* %16, i32 %20, i32 %24)
  %26 = load %struct.rdma_ud_param*, %struct.rdma_ud_param** %5, align 8
  %27 = getelementptr inbounds %struct.rdma_ud_param, %struct.rdma_ud_param* %26, i32 0, i32 2
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.cmatest_node*, %struct.cmatest_node** %4, align 8
  %30 = getelementptr inbounds %struct.cmatest_node, %struct.cmatest_node* %29, i32 0, i32 4
  store i32 %28, i32* %30, align 4
  %31 = load %struct.rdma_ud_param*, %struct.rdma_ud_param** %5, align 8
  %32 = getelementptr inbounds %struct.rdma_ud_param, %struct.rdma_ud_param* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = load %struct.cmatest_node*, %struct.cmatest_node** %4, align 8
  %35 = getelementptr inbounds %struct.cmatest_node, %struct.cmatest_node* %34, i32 0, i32 3
  store i32 %33, i32* %35, align 4
  %36 = load %struct.cmatest_node*, %struct.cmatest_node** %4, align 8
  %37 = getelementptr inbounds %struct.cmatest_node, %struct.cmatest_node* %36, i32 0, i32 2
  %38 = load i32, i32* %37, align 4
  %39 = load %struct.rdma_ud_param*, %struct.rdma_ud_param** %5, align 8
  %40 = getelementptr inbounds %struct.rdma_ud_param, %struct.rdma_ud_param* %39, i32 0, i32 0
  %41 = call i32 @ibv_create_ah(i32 %38, %struct.TYPE_8__* %40)
  %42 = load %struct.cmatest_node*, %struct.cmatest_node** %4, align 8
  %43 = getelementptr inbounds %struct.cmatest_node, %struct.cmatest_node* %42, i32 0, i32 1
  store i32 %41, i32* %43, align 4
  %44 = load %struct.cmatest_node*, %struct.cmatest_node** %4, align 8
  %45 = getelementptr inbounds %struct.cmatest_node, %struct.cmatest_node* %44, i32 0, i32 1
  %46 = load i32, i32* %45, align 4
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %50, label %48

48:                                               ; preds = %2
  %49 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.1, i64 0, i64 0))
  br label %55

50:                                               ; preds = %2
  %51 = load %struct.cmatest_node*, %struct.cmatest_node** %4, align 8
  %52 = getelementptr inbounds %struct.cmatest_node, %struct.cmatest_node* %51, i32 0, i32 0
  store i32 1, i32* %52, align 4
  %53 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @test, i32 0, i32 0), align 4
  %54 = add nsw i32 %53, -1
  store i32 %54, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @test, i32 0, i32 0), align 4
  store i32 0, i32* %3, align 4
  br label %57

55:                                               ; preds = %48
  %56 = call i32 (...) @connect_error()
  store i32 -1, i32* %3, align 4
  br label %57

57:                                               ; preds = %55, %50
  %58 = load i32, i32* %3, align 4
  ret i32 %58
}

declare dso_local i32 @inet_ntop(i32, i32, i8*, i32) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @ibv_create_ah(i32, %struct.TYPE_8__*) #1

declare dso_local i32 @connect_error(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
